@@ -17,7 +17,7 @@ pipeline {
         NEXUS_GRP_REPO   = 'vprofile-group'
         NEXUS_LOGIN      = 'nexuslogin'
         SONARSERVER      = 'sonarserver'
-        SONARSCANNER     = 'soarscanner'
+        SONARSCANNER     = 'sonarscanner'
     }
 
     stages {
@@ -43,6 +43,25 @@ pipeline {
         stage("Checkstyle Analysis") {
             steps {
                 sh "mvn -s settings.xml checkstyle:checkstyle"
+            }
+        }
+        stage('Sonar Analysis') {
+            environment {
+                scannerHome = tool "${SONARSCANNER}"
+                SONAR_SCANNER_OPTS = "--add-opens java.base/java.lang=ALL-UNNAMED"
+            }
+            steps {
+                withSonarQubeEnv("${SONARSERVER}") {
+                    sh '''${scannerHome}/bin/sonar-scanner \
+                      -Dsonar.projectKey=vprofile \
+                      -Dsonar.projectName=vprofile \
+                      -Dsonar.projectVersion=1.0 \
+                      -Dsonar.sources=src/ \
+                      -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
+                      -Dsonar.junit.reportsPath=target/surefire-reports/ \
+                      -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+                      -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
+                }
             }
         }
 
